apps/market-data/sin/ui-apps/metadata-management/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-management
spec:
  selector:
    matchLabels:
      app: metadata-management
  replicas: 1
  template:
    metadata:
      labels:
        app: metadata-management
    spec:
      serviceAccountName: ui-apps-sa-prod
      containers:
        - name: metadata-management
          image: ghcr.io/alphalab-hq/metadata-management:20220206_051629Z
          resources:
            requests:
              cpu: "250m"
              memory: 200Mi
            limits:
              cpu: "500m"
              memory: 500Mi
          ports:
            - containerPort: 4000
      tolerations:
        - key: node/destiny
          operator: 'Equal'
          value: 'alc-ui'
          effect: 'NoSchedule'
      nodeSelector:
        node/destiny: alc-ui
      imagePullSecrets:
        - name: ghcr-creds
