apps/market-data/sin/ui-apps/metadata-management/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metadata-management
spec:
  selector:
    app: metadata-management
  ports:
    - protocol: TCP
      port: 4000
